# oyna

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: python-package.yml
src/find_difference/: method_1.py  v_1.py
src/games/find_difference/: kamyarmg.py
src/games/matching/: kamyarmg.py
src/games/maze/: kamyarmg.py
src/games/memory/: kamyarmg.py
src/games/minesweeper/: kamyarmg.py
src/games/sudoku/: kamyarmg.py
src/matching/: matching.py
src/maze/: method_1.py
src/memory/: memory.py  method_1.py
src/minesweeper/: method_1.py  minesweeper.py
src/oyna/bubble_shooter/: README.md  grid_base.py
src/oyna/checkers/: README.md
src/oyna/chimp/: README.md  grid_base.py
src/oyna/chutes_and_ladders/: README.md  grid_base.py  kamyarmg.py
src/oyna/dino/: README.md  grid_base.py  kamyarmg.py
src/oyna/explosion/: grid_base.py
src/oyna/falling_tower/: README.md
src/oyna/find_difference/: README.md  grid_base.py  grid_base.sh  kamyarmg.py
src/oyna/flappy_bird/: README.md  grid_base.py
src/oyna/matching/: README.md  kamyarmg.py
src/oyna/maze/: README.md  grid_base.py  kamyarmg.py
src/oyna/memory/: grid_base.py  kamyarmg.py
src/oyna/minesweeper/: README.md  grid_base.py
src/oyna/reverse_slide_puzzle/: README.md  grid_base.py
src/oyna/reversi/: README.md  grid_base.py
src/oyna/shoot_colors/: README.md  grid_base.py
src/oyna/snake/: README.md  grid_base.py  kamyarmg.py
src/oyna/sudoku/: README.md  grid_base.py  kamyarmg.py
src/oyna/supermario_pixel/: README.md
src/oyna/tetris/: README.md  grid_base.py
src/oyna/tik_tok_toe/: README.md  grid_base.py
src/oyna/twenty_forty_eight_2048/: README.md  grid_base.py  kamyarmg.py
src/oyna/ufo_explosion/: README.md  grid_base.py
src/poxly/: main.py  test_poxly.py
src/sudoku/: method_1.py
src/template/: method_1.py
tests/: test_example.py
